# python_api

./: .gitignore  .mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 175357b00e24_generating_missing_columns.py  e5254cea360d_generating_missing_columns.py  f562d4b211b7_.py
app/: config.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
