[tool.poetry]
name = "python api project"
version = "0.0.1"
description = "Python API project"
authors = ["Edgaras Kelertas <edgaras.kelertas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = {extras = ["all"], version = "^0.88.0"}
wheel = "^0.38.4"
psycopg2 = "^2.9.5"
sqlalchemy = "^1.4.44"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
flake8 = "5.0.4"
pre-commit = "2.20.0"
pytest = "7.1.3"
safety = "2.3.1"
mypy = "0.982"
bandit = "1.7.4"
isort = "5.10.1"
jupyterlab = "3.4.8"

[tool.flake8]
exclude = '''
/(
  \.git
 |\.hg
 |\.eggs
 |\.mypy_cache
 |\.tox
 |\.venv
 |\.vscode
 |_build
 |buck-out
 |build
 |dist
 |condaenv
)/
'''
max_line_length = 99
max-complexity = 18

[tool.black]
line-length = 99
preview = true
include = '/project$|\.pyi?$'
exclude = '''
/(
  \.git
 |\.hg
 |\.eggs
 |\.mypy_cache
 |\.tox
 |\.venv
 |\.vscode
 |_build
 |buck-out
 |build
 |dist
 |condaenv
)/
'''

[tool.isort]
profile = "black"
line_length = 99
